Fix krita crashing on splashscreen in macOS

in macOS Python >=3.7 does not like locale without the last
encoding part. Hardcoded UTF-8 to make it work on any xx_yy
lang combination. 

BUG:417312